fixed issue with overlapping scrollbars

--- a/client/styles/base.styl
+++ b/client/styles/base.styl
@@ -163,5 +163,6 @@ span.error
   display block
   color uber-orange
 
-section.workflow-list
-  overflow-y: auto
+section.workflow-list {
+  overflow-y: hidden;
+}
